fix <strong> element font weight. Fix overflowing element under homepage nav. Colour hamburger icon.

--- a/zlinmanavic/css/override.css
+++ b/zlinmanavic/css/override.css
@@ -57,7 +57,7 @@ body,
 }
 
 b,
-.strong {
+strong {
   font-weight: bold !important;
 }
 
@@ -89,6 +89,9 @@ b,
 }
 .wtf-homepage .section.default-01.design-01.section-media.wnd-background-image .section-inner {
   display: none !important;
+}
+.header-01.design-01 > .section-inner {
+  padding: 35px 0;
 }
 
 /* For smaller screens, serve a different hero image and aspect ratio */
@@ -130,6 +133,13 @@ b,
 }
 .header-01.design-01 > .section-inner {
   padding: 40px 0;
+}
+
+/* hamburger menu - colour */
+.section-media.header-01 #menu-submit span,
+.section-media.header-01 #menu-submit span:after,
+.section-media.header-01 #menu-submit span:before {
+  background-color: #004a8f;
 }
 
 /* other pages - navigation - orange bacground */
